--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,5 @@
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
-
-# Testing
-coverage/
-
-# Production
-build/
-dist/
-out/
-*.vsix
-
-# Development
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# TypeScript
-*.tsbuildinfo
-
-# VS Code Extension
+out
+dist
+node_modules
 .vscode-test/
-.vscodeignore
+*.vsix
