--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
+# GitHub Package Registry configuration
+@harmony:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+registry=https://registry.npmjs.org/
 enable-pre-post-scripts = true
