chore: optimize build configuration and dependency management
- Remove GITHUB_TOKEN auth from `.npmrc` to simplify GitHub Package Registry setup
- Reorganize Makefile: streamline `clean` target to remove additional build artifacts and improve target ordering
- Update `package.json`: rename package to `harmony-vscode`, add self-referential dependency, and reorder devDependencies for clarity
- Modify `pnpm-lock.yaml` to include `harmony-vscode` as a linked dependency
- Enhance `pnpm-workspace.yaml`: add current directory to workspace, include additional built dependencies (`@vscode/vsce-sign`, `esbuild`, `keytar`), and override `harmony-vscode` to self-link

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,9 @@
+packages:
+  - .
+onlyBuiltDependencies:
+  - '@vscode/vsce-sign'
+  - esbuild
+  - keytar
 overrides:
   '@harmony/core': link:../harmony-core
+  harmony-vscode: 'link:'
