--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@harmony/vscode",
+  "name": "harmony-vscode",
   "private": true,
   "displayName": "Harmony",
   "description": "Harmony AI driven knowledge base and task management system",
@@ -54,20 +54,21 @@
     "test": "vscode-test"
   },
   "dependencies": {
-    "@harmony/core": "0.0.0-dev"
+    "@harmony/core": "0.0.0-dev",
+    "harmony-vscode": "link:"
   },
   "devDependencies": {
-    "@types/vscode": "^1.96.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.96.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
-    "eslint": "^9.16.0",
-    "esbuild": "^0.24.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.7.2",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
-    "@vscode/vsce": "^2.24.0"
+    "@vscode/vsce": "^2.24.0",
+    "esbuild": "^0.24.0",
+    "eslint": "^9.16.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.7.2"
   }
 }
